Fixed issue with background on mobile
Fixed an issue where the background moves when you tap somewhere like on desktop. This makes the background look weird and has therefore been fixed

--- a/src/routes/+page.css
+++ b/src/routes/+page.css
@@ -47,6 +47,13 @@ a:hover {
   /* Place the background behind other content */
 }
 
+@media screen and (max-width: 768px) {
+  .parallax-background {
+    transform:none;
+  }
+
+}
+
 /* Set container styles */
 .container {
   display: flex;
